--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -57,8 +57,8 @@
         <com.getbase.floatingactionbutton.AddFloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            fab:fab_colorNormal="?attr/colorControlNormal"
-            fab:fab_colorPressed="?attr/colorControlHighlight"
+            fab:fab_colorNormal="?colorControlNormal"
+            fab:fab_colorPressed="?colorControlHighlight"
             android:id="@id/fabButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
