--- a/app/src/main/res/layout/activity_new_issue.xml
+++ b/app/src/main/res/layout/activity_new_issue.xml
@@ -34,14 +34,14 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="?actionBarSize"
                 android:orientation="horizontal"
                 android:animateLayoutChanges="true">
 
                 <TextView
                     android:id="@+id/assignee"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_height="?actionBarSize"
                     android:hint="@string/new_issue_hint_assignee"
                     style="@style/new_issue_push_access_row" />
 
@@ -49,13 +49,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="?actionBarSize"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/milestone"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_height="?actionBarSize"
                     android:hint="@string/new_issue_hint_milestone"
                     style="@style/new_issue_push_access_row" />
 
@@ -63,13 +63,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="?actionBarSize"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/labels"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_height="?actionBarSize"
                     android:hint="@string/new_issue_hint_labels"
                     style="@style/new_issue_push_access_row"
                     android:singleLine="false"
