--- a/app/src/main/res/layout/commit_comment_row.xml
+++ b/app/src/main/res/layout/commit_comment_row.xml
@@ -25,19 +25,31 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="@dimen/gapMedium">
 
-                <TextView
-                    android:id="@+id/textFileName"
-                    style="@style/TextAppearance.AppCompat.Headline"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?colorPrimary"
-                    tools:text="MyFile.java" />
+                    android:orientation="horizontal">
 
-                <com.alorma.diff.lib.DiffTextView
+                    <com.alorma.github.ui.view.CircularImageView
+                        android:id="@id/avatarAuthor"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_margin="8dp" />
+
+                    <TextView
+                        android:id="@+id/textAuthor"
+                        style="@style/TextAppearance.AppCompat.Headline"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black_semi_transparent"
+                        tools:text="MyFile.java" />
+                </LinearLayout>
+
+                <TextView
                     android:id="@+id/textContent"
                     style="@style/TextAppearance.AppCompat.Caption"
                     android:layout_width="match_parent"
@@ -55,7 +67,7 @@
                 android:background="@color/gray_github_light_selected"
                 android:minHeight="?actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:theme="@style/FileRowToolbar" />
+                app:theme="@style/CommitContentRowToolbar" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
