--- a/app/src/main/res/layout/general_repos_fragment.xml
+++ b/app/src/main/res/layout/general_repos_fragment.xml
@@ -7,7 +7,7 @@
         android:id="@+id/tabStrip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary" />
+        android:background="?colorPrimary" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
