--- a/app/src/main/res/layout/issue_detail_issue_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_view.xml
@@ -102,14 +102,14 @@
                 <TextView
                     android:id="@+id/textAssignee"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_height="?actionBarSize"
                     style="@style/new_issue_push_access_row"
                     android:layout_marginLeft="@dimen/gapLarge" />
 
                 <TextView
                     android:id="@+id/textMilestone"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_height="?actionBarSize"
                     style="@style/new_issue_push_access_row"
                     android:layout_marginLeft="@dimen/gapLarge"/>
 
