--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:padding="@dimen/actions_padding"
-        android:background="?attr/colorPrimary"
+        android:background="?colorPrimary"
         android:id="@id/user">
 
         <com.alorma.github.ui.view.CircularImageView
