--- a/app/src/main/res/layout/people_activity.xml
+++ b/app/src/main/res/layout/people_activity.xml
@@ -19,7 +19,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"
+                android:background="?colorPrimary"
                 android:orientation="horizontal">
 
                 <com.alorma.github.ui.view.SlidingTabLayout
