--- a/app/src/main/res/layout/spinner_branch.xml
+++ b/app/src/main/res/layout/spinner_branch.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimaryDark">
+    android:background="?colorPrimaryDark">
 
     <TextView
         android:layout_width="match_parent"
