--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,8 +5,8 @@
     android:id="@id/toolbar"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:minHeight="?attr/actionBarSize"
-    android:background="?attr/colorPrimary"
+    android:minHeight="?actionBarSize"
+    android:background="?colorPrimary"
     app:contentInsetStart="@dimen/second_keyline"
     app:theme="@style/Toolbar.AppCompat.Responsive"
     app:popupTheme="@style/Toolbar.Popup.AppCompat"/>
