--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -1,55 +1,75 @@
-<?xml version="1.0" encoding="utf-8"?>
-<com.alorma.github.ui.view.FABCenterLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                           xmlns:app="http://schemas.android.com/apk/res-auto"
-                                           android:layout_width="match_parent"
-                                           android:layout_height="match_parent"
-                                           app:top_id="@id/top"
-                                           app:scrollable_id="@id/cardsContainerScroll"
-                                           android:id="@id/fabLayout"
-                                           android:background="@color/gray_github_light_selected">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <FrameLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarLayout"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:background="?colorPrimary"
-        android:id="@id/top">
+        android:layout_height="192dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <ImageView
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/ctlLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/image"
-            android:scaleType="centerCrop"/>
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@id/toolbar"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:minHeight="?actionBarSize"
-            android:background="@android:color/transparent"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+            <ImageView
+                android:id="@+id/imgToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax" />
 
-    </FrameLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:layout_collapseMode="pin"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-    <ScrollView
+            </android.support.v7.widget.Toolbar>
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="184dp"
-        android:clipToPadding="false"
-        android:layout_marginTop="?actionBarSize"
-        android:id="@id/cardsContainerScroll">
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/cardsContainer">
+    <!--
+    <LinearLayout
+        android:id="@+id/cardsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:scrollbars="vertical">
 
-            <include layout="@layout/card_bio_layout"/>
+        <include layout="@layout/card_bio_layout" />
 
-            <include layout="@layout/card_github_data_layout"/>
+        <include layout="@layout/card_github_data_layout" />
 
-            <include layout="@layout/card_github_plan_layout"/>
-        </LinearLayout>
-    </ScrollView>
-</com.alorma.github.ui.view.FABCenterLayout>
+        <include layout="@layout/card_github_plan_layout" />
+    </LinearLayout>-->
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/gapLarge"
+        app:borderWidth="0dp"
+        app:layout_anchor="@id/appbarLayout"
+        app:layout_anchorGravity="bottom|right|end" />
+
+</android.support.design.widget.CoordinatorLayout>
