--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -33,5 +33,7 @@
     <item name="nav_drawer_about" type="id">nav_drawer_about</item>
     <item name="nav_drawer_sign_out" type="id">nav_drawer_sign_out</item>
     <item name="action_repo_change_branch" type="id">action_repo_change_branch</item>
+    <item name="action_menu_follow_user" type="id">action_menu_follow_user</item>
+    <item name="action_menu_unfollow_user" type="id">action_menu_unfollow_user</item>
 
 </resources>
