--- a/app/src/main/res/layout/readme_fragment.xml
+++ b/app/src/main/res/layout/readme_fragment.xml
@@ -1,26 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/htmlContentView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/htmlContentView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/gapMedium" />
-        </LinearLayout>
-    </ScrollView>
-
-</RelativeLayout>
+            android:layout_height="match_parent"
+            android:padding="@dimen/gapMedium" />
+    </LinearLayout>
+</ScrollView>
