--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -1,69 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/toolbar" />
-
-    <RelativeLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="148dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.v7.widget.CardView
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/ctlLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxWidth="@dimen/editor_popup_width"
-            card_view:cardUseCompatPadding="true"
-            card_view:cardElevation="4dp"
-            card_view:cardCornerRadius="3dp"
-            android:id="@+id/cardGistData"
-            android:layout_margin="@dimen/gapMedium"
-            android:layout_marginBottom="0dp">
+            android:layout_height="match_parent"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:layout_collapseMode="pin"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="@dimen/gapMedium"
+                android:layout_marginTop="@dimen/gapMedium"
                 android:orientation="vertical"
-                android:padding="@dimen/gapMedium">
+                app:layout_scrollFlags="scroll|enterAlways">
 
                 <EditText
+                    android:id="@+id/gistDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/gist_description"
-                    android:id="@+id/gistDescription"
-                    android:maxLines="4"/>
+                    android:singleLine="true" />
 
                 <Switch
+                    android:id="@+id/gistPrivate"
+                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/gist_private"
                     android:layout_marginTop="@dimen/gapMedium"
-                    style="@style/Base.TextAppearance.AppCompat.Subhead"
-                    android:paddingLeft="@dimen/gapSmall"
                     android:checked="true"
-                    android:id="@+id/gistPrivate" />
-
+                    android:text="@string/gist_private" />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_anchor="@id/appbarLayout" >
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler"
-            android:layout_below="@+id/cardGistData" />
+            android:paddingBottom="?actionBarSize"
+            android:paddingRight="72dp" />
 
-        <com.getbase.floatingactionbutton.AddFloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="?colorControlNormal"
-            fab:fab_colorPressed="?colorControlHighlight"
-            android:id="@id/fabButton"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="16dp"
-            android:layout_gravity="right|bottom" />
-    </RelativeLayout>
-</LinearLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="?selectableItemBackground"
+            android:id="@+id/createGist"/>
+    </FrameLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:borderWidth="0dp"
+        app:layout_anchor="@id/appbarLayout"
+        app:layout_anchorGravity="bottom|right|end" />
+
+</android.support.design.widget.CoordinatorLayout>
