--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="72dp"
-                android:layout_marginRight="@dimen/gapMedium"
+                android:layout_marginRight="36dp"
                 android:layout_marginTop="@dimen/gapMedium"
                 android:orientation="vertical"
                 app:layout_scrollFlags="scroll|enterAlways">
