Removed snackbars and fix layout on new gist actiity

--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -56,25 +56,13 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_anchor="@id/appbarLayout" >
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="?actionBarSize"
-            android:paddingRight="72dp" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="?selectableItemBackground"
-            android:id="@+id/createGist"/>
-    </FrameLayout>
+        android:paddingBottom="?actionBarSize"
+        android:paddingRight="72dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabButton"
