--- a/app/src/main/res/menu/new_issue_comment.xml
+++ b/app/src/main/res/menu/new_issue_comment.xml
@@ -1,10 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:tools="http://schemas.android.com/tools"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      tools:context="com.alorma.github.ui.activity.NewIssueActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.alorma.github.ui.activity.NewIssueActivity">
     <item
         android:id="@+id/action_send"
-        android:title="@string/action_send_issue"
         android:orderInCategory="100"
-        app:showAsAction="always"/>
+        android:title="@string/action_send_issue"
+        app:showAsAction="always" />
+    <item
+        android:id="@id/action_add_emoji"
+        android:orderInCategory="200"
+        android:title="@string/add_emoji"
+        app:showAsAction="always" />
 </menu>
