Extra content: Emoji

--- a/app/src/main/res/layout/activity_content_editor.xml
+++ b/app/src/main/res/layout/activity_content_editor.xml
@@ -27,10 +27,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/gray_github_medium"
+        android:background="@color/gray_github_light"
         android:minHeight="?actionBarSize"
         app:contentInsetStart="@dimen/second_keyline"
         app:popupTheme="@style/Toolbar.Popup.AppCompat"
-        app:theme="@style/Toolbar.AppCompat.Responsive" />
+        app:theme="@style/Toolbar.AppCompat.Light.Responsive" />
 
 </RelativeLayout>
