--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
     <color name="gray_github_light">#f3f3f3</color>
     <color name="gray_github_medium">#ffb9b9b9</color>
+    <color name="gray_github_dark">#ff979797</color>
     <color name="gray_github_light_selected">#ffdedede</color>
     
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="issue_state_open">#ff54A141</color>
     <color name="issue_state_close">#ffd67a4c</color>
     <color name="pullrequest_state_open">#ff54A141</color>
