--- a/app/src/main/res/menu/content_editor_extra.xml
+++ b/app/src/main/res/menu/content_editor_extra.xml
@@ -5,19 +5,19 @@
     <item
         android:id="@+id/add_content_editor_emojis"
         android:title="@string/content_editor_emojis"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/add_content_editor_picture"
         android:title="@string/content_editor_picture"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/add_content_editor_source"
         android:title="@string/content_editor_source"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
-    <item
+    <!--<item
         android:id="@+id/add_content_editor_mentions"
         android:title="@string/content_editor_mentions"
         app:showAsAction="always">
@@ -35,6 +35,6 @@
                 android:title="@string/content_editor_issue"
                 app:showAsAction="ifRoom" />
         </menu>
-    </item>
+    </item>-->
 
 </menu>
