--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,6 +93,9 @@
     <style name="SpotDialog.loading_adding_milestones">
         <item name="DialogTitleText">@string/adding_milestone</item>
     </style>
+    <style name="SpotDialog.loading_adding_comment">
+        <item name="DialogTitleText">@string/adding_comment</item>
+    </style>
 
     <style name="SpotDialog.loading_adding_assignee">
         <item name="DialogTitleText">@string/adding_assignee</item>
@@ -161,6 +164,7 @@
 
     <string name="opening_file">Opening file</string>
     <string name="merging">Merging</string>
+    <string name="adding_comment">Adding comment</string>
 
     <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">@color/accent</item>
