Content editor on create new issue

--- a/app/src/main/res/layout/activity_new_issue.xml
+++ b/app/src/main/res/layout/activity_new_issue.xml
@@ -80,7 +80,7 @@
 
         </LinearLayout>
 
-        <EditText
+        <TextView
             android:layout_marginTop="@dimen/gapLarge"
             android:hint="@string/leave_a_comment"
             android:layout_width="match_parent"
