Commitsd list improvement

--- a/app/src/main/res/layout/commit_row.xml
+++ b/app/src/main/res/layout/commit_row.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="?selectableItemBackground">
 
     <com.alorma.github.ui.view.CircularImageView
         android:id="@id/avatarAuthor"
